--- a/view/index.html
+++ b/view/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--TITLE-->
-    <title>Nutri_argentina</title>
+    <title>Nutri_argentinaSI</title>
 
     <!--CSS-->
     <link href="C:\Users\54344\Desktop\pro\nutri\css\index.css" rel="stylesheet" img="" type="text/css">
