index listo, se presenta seccion comidas

--- a/view/comidas.html
+++ b/view/comidas.html
@@ -6,7 +6,7 @@
     <title>Comidas</title>
 
     <!--CSS-->
-    <link href="/css/comidas.css" rel="stylesheet" img="" type="text/css">
+    <link href="C:\Users\54344\Desktop\again\css\comidas.css" rel="stylesheet" img="" type="text/css">
 
     <!--FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +14,38 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Pagina de comidas</h1>
+    <header>
+        <div class="logo"><img src="C:\Users\54344\Desktop\again\css\img\logo.jpeg" alt=""></div>
+    </header>
+
+
+    <main>
+        <H1>COMIDAS</H1>
+        <div class="content-card">
+            <div class="descripcion">
+                <p class="info">DESAYUNO</p>
+            </div>
+            <img src="C:\Users\54344\Desktop\again\css\img\comidas\desayuno.jpg" alt="Imagen Desayuno">
+        </div>
+        <div class="content-card">
+            <div class="descripcion">
+                <p class="info">ALMUERZO</p>
+            </div>
+            <img src="C:\Users\54344\Desktop\again\css\img\comidas\almuerzo.jpg" alt="Imagen Desayuno">
+        </div>
+        <div class="content-card">
+            <div class="descripcion">
+                <p class="info">MERIENDA</p>
+            </div>
+            <img src="C:\Users\54344\Desktop\again\css\img\comidas\merienda.jpg" alt="Imagen Desayuno">
+        </div>
+        <div class="content-card">
+            <div class="descripcion">
+                <p class="info">CENA</p>
+            </div>
+            <img src="C:\Users\54344\Desktop\again\css\img\comidas\cena.jpg" alt="Imagen Desayuno">
+        </div>
+        
+</main>
 </body>
 </html>
