--- a/view/index.html
+++ b/view/index.html
@@ -4,10 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--TITLE-->
-    <title>Nutri_argentinaSI</title>
+    <title>Nutri_argentina</title>
 
     <!--CSS-->
-    <link href="C:\Users\54344\Desktop\pro\nutri\css\index.css" rel="stylesheet" img="" type="text/css">
+    
+    <link href="C:\Users\54344\Desktop\again\css\index.css" rel="stylesheet" img="" type="text/css">
 
     <!--FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +17,6 @@
 </head>
 <body>
     <header>
-            <div class="logo"><img src="C:\Users\54344\Desktop\pro\nutri\css\img\logo.jpeg" alt=""></div>
             <div class="menu-hamburguesa">
                 <button class="menu-icon"></button>
                 <ul class="menu-list">
@@ -26,12 +26,13 @@
                     <li><a href="C:\Users\54344\Desktop\pro\nutri\view\contacos.html">Contactos</a></li>
                 </ul>
             </div>
+            <div class="logo"><img src="C:\Users\54344\Desktop\again\css\img\logo.jpeg" alt=""></div>
     </header>
 
     <main>
 
             <div class="content-card">
-                <img src="C:\Users\54344\Desktop\pro\nutri\css\img\marta.png" alt="Imagen Lic. Marta Casares">
+                <img src="C:\Users\54344\Desktop\again\css\img\marta.png" alt="Imagen Lic. Marta Casares">
                 <h1>¡Hola, Soy Marta Casares!</h1>
                 <div class="descripcion">
                     <p class="info">Lorem ipsum es el textoe usa habitualmente en en demostraciones.</p>
@@ -41,17 +42,17 @@
             </div>
             
             <div class="content-contacto">
-                <a href="https://l.instagram.com/?u=https%3A%2F%2Fwa.link%2Fkz5qaz&e=AT1e_N4Sfkfm6mRGZcVCJeUUPFfIcpCBcJY6dplLjh9nqsA4K2b1DV84oSk8yeMdMi3_64XG6UA39jYedKCUlDs6m7ca7T-5-tq3XQ">
-                    <img src="C:\Users\54344\Desktop\pro\nutri\css\img\home\whatsapp.png" alt="WhatsApp">
+                <a href="C:\Users\54344\Desktop\again\css\img\home\whatsapp.png">
+                    <img src="C:\Users\54344\Desktop\again\css\img\home\whatsapp.png" alt="WhatsApp">
                 </a>
                 <a href="">
-                    <img src="C:\Users\54344\Desktop\pro\nutri\css\img\home\facebook.png" alt="Facebook">
+                    <img src="C:\Users\54344\Desktop\again\css\img\home\facebook.png" alt="Facebook">
                 </a>
                 <a href="https://www.instagram.com/nutri_argentina/">
-                    <img src="C:\Users\54344\Desktop\pro\nutri\css\img\home\instagram.png" alt="Instagrma">
+                    <img src="C:\Users\54344\Desktop\again\css\img\home\instagram.png" alt="Instagrma">
                 </a>
                 <a href="">
-                    <img src="C:\Users\54344\Desktop\pro\nutri\css\img\home\linkedin.png" alt="Linkedin">
+                    <img src="C:\Users\54344\Desktop\again\css\img\home\linkedin.png" alt="Linkedin">
                 </a>
             </div>
     </main>
