--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ body {
     width: auto;
     height: auto;
     margin: 0%;
-     margin-top: 3%;
+    margin-top: 3%;
     background-color: #85B4A2;
 }
 
@@ -57,6 +57,7 @@ header {
 
 header img {
     width: 30%;
+    border-radius: 100%;
     margin-left: 37%;
 }
 
