Seccion contactos, mockaps

--- a/view/contacos.html
+++ b/view/contacos.html
@@ -1,11 +1,51 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contactos</title>
+
+    <!--CSS-->
+    <link href="C:\Users\54344\Desktop\again\css\contacto.css" rel="stylesheet" img="" type="text/css">
+
+    <!--FONTS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>pagina de contacos</h1>
+
+    <header>
+        <div class="logo"><img src="C:\Users\54344\Desktop\again\css\img\logo.jpeg" alt=""></div>
+    </header>
+
+    <main>
+        <h1>CONTACTOS</h1>
+
+        <div class="content-contacto">
+
+            <div class="con-contacto">
+                <a href="https://api.whatsapp.com/send?phone=543442678478&text=Hola%2C%20como%20estas%3F%20Quiero%20solicitar%20informaci%C3%B3n%20sobre%20las%20consultas.%20Muchas%20gracias!%20%F0%9F%98%80">
+                    <img src="C:\Users\54344\Desktop\again\css\img\home\whatsapp.png" alt="WhatsApp">
+                    <p>WhatsApp</p>
+                </a>
+                <a href="https://www.instagram.com/nutri_argentina/">
+                    <img src="C:\Users\54344\Desktop\again\css\img\home\instagram.png" alt="Instagrma">
+                    <p>Instagram</p>
+                </a>
+            </div>
+
+            <div class="con-contacto">
+                <a href="">
+                    <img src="C:\Users\54344\Desktop\again\css\img\home\facebook.png" alt="Facebook">
+                    <p>Facebook</p>
+                </a>
+                <a href="">
+                    <img src="C:\Users\54344\Desktop\again\css\img\home\linkedin.png" alt="Linkedin">
+                    <p>Linkedin</p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
