--- a/view/index.html
+++ b/view/index.html
@@ -44,7 +44,7 @@
             </div>
             
             <div class="content-contacto">
-                <a href="C:\Users\54344\Desktop\again\css\img\home\whatsapp.png">
+                <a href="https://api.whatsapp.com/send?phone=543442678478&text=Hola%2C%20como%20estas%3F%20Quiero%20solicitar%20informaci%C3%B3n%20sobre%20las%20consultas.%20Muchas%20gracias!%20%F0%9F%98%80">
                     <img src="C:\Users\54344\Desktop\again\css\img\home\whatsapp.png" alt="WhatsApp">
                 </a>
                 <a href="">
